--- a/projectTH1/styles.css
+++ b/projectTH1/styles.css
@@ -93,8 +93,8 @@ header .profile-image:hover {
   padding: 20px 40px 40px;
   max-width: 500px;
   text-align: left;
-  background: #fff;
-  border-bottom: 4px solid #222;
+  background: #aeffff;
+  border-bottom: 4px solid #fff;
   border-radius: 6px;
   transition: all .5s;
 }
@@ -202,6 +202,35 @@ a.social:hover {
     max-width: 1200px;
     margin: 40px auto;
   }
+
+//shaking with css
+.face:hover {
+  animation: shake 0.82s cubic-bezier(.36,.07,.19,.97) both;
+  transform: translate3d(0, 0, 0);
+  backface-visibility: hidden;
+  perspective: 1000px;
+}
+
+@keyframes shake {
+  10%, 90% {
+    transform: translate3d(-1px, 0, 0);
+  }
+  
+  20%, 80% {
+    transform: translate3d(2px, 0, 0);
+  }
+
+  30%, 50%, 70% {
+    transform: translate3d(-4px, 0, 0);
+  }
+
+  40%, 60% {
+    transform: translate3d(4px, 0, 0);
+  }
+}
+
+
+
 
 }
 
